# ima-mcp-http

./: .gitignore  DOCKER.md  Dockerfile  LICENSE  README.md  docker-compose.yml  ima_mcp_stdio.json  list_knowledge_bases.py  mcp_config.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_http_all.py  test_http_mode.py  test_project.py  test_stdio_all.py
src/ima_mcp/: __init__.py  cache.py  credentials.py  http_server.py  knowledge_base.py  main.py  notes.py
src/ima_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/ima_mcp/mcp/: SERVER_METADATA.json
src/ima_mcp/mcp/tools/: append_note.json  batch_import_urls.json  batch_search_knowledge.json  batch_upload_files.json  check_credentials.json  create_note.json  get_knowledge_base.json  get_note.json  import_urls.json  list_knowledge_bases.json  search_knowledge.json  upload_file.json
src/ima_mcp_http/: client.py  http_server.py  main.py  utils.py
src/ima_mcp_http/mcp/tools/: search_notes.json
tests/: test_client.py
