[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ima-mcp-http"
version = "1.0.0"
description = "IMA OpenAPI MCP HTTP Service"
readme = "README.md"
authors = [
    { name = "Du Hanjun", email = "hanjun.du@outlook.com" }
]
license = { file = "LICENSE" }
dependencies = [
    "requests",
    "urllib3",
    "fastapi",
    "uvicorn",
    "pydantic"
]
requires-python = ">=3.7"

[project.scripts]
ima-mcp-http = "ima_mcp_http.main:main"

# [project.urls]
# "Homepage" = ""
# "Repository" = ""
